--- a/.github/workflows/static-build.yaml
+++ b/.github/workflows/static-build.yaml
@@ -13,5 +13,7 @@ jobs:
           node-version: "19.8.1"
           registry-url: "https://registry.npmjs.org"
       - run: npm update
-      - run: npm install
-      - run: npm run build
+      - run: cd frontend;npm install
+      - run: cd frontend;npm run build
+        env:
+          CI: false
