--- a/.github/workflows/static-build.yaml
+++ b/.github/workflows/static-build.yaml
@@ -17,3 +17,9 @@ jobs:
       - run: cd frontend;npm run build
         env:
           CI: false
+      - run: cd frontend;cd build;ls
+      - uses: actions/configure-pages@v3
+      - uses: actions/upload-pages-artifact@v1
+        with:
+          path: "./frontend/build"
+      - uses: actions/deploy-pages@v2
