--- a/.github/workflows/static-build.yaml
+++ b/.github/workflows/static-build.yaml
@@ -11,18 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
+      - uses: actions/setup-node@v6
         with:
-          node-version: "19.8.1"
+          node-version: "24.13.0"
           registry-url: "https://registry.npmjs.org"
-      - run: npm update
-      - run: cd frontend;npm install
-      - run: cd frontend;npm run build
+      - run: npm ci && npm run build
+        working-directory: web/
         env:
           CI: false
-      - run: cd frontend;cd build;ls
-      - uses: actions/configure-pages@v3
-      - uses: actions/upload-pages-artifact@v1
+      - uses: actions/configure-pages@v5
+      - uses: actions/upload-pages-artifact@v4
         with:
-          path: "./frontend/build"
-      - uses: actions/deploy-pages@v2
+          path: "build/client"
+      - uses: actions/deploy-pages@v4
